--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -1,2 +1,14 @@
 {% section 'product' %}
-{% section 'related-products' %}
+{% comment %} {% section 'related-products' %} {% endcomment %}
+<div class="grid">
+<div class="grid__item medium-up--padding-top-two small--padding-top-three">
+  <header class="section-header">
+    <h3>Also. . .</h3>
+  </header>
+
+<div class="grid related">
+{% include 'cross-sell' %}
+</div>
+
+</div>
+</div>
