--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  {% comment %} <meta name="viewport" content="width=device-width,initial-scale=1"> {% endcomment %}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="{{ settings.color_primary }}">
   <link rel="canonical" href="{{ canonical_url }}">
 
@@ -34,7 +35,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/qif5sjw.css">
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script>
     document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
@@ -52,7 +53,6 @@
     $(window).on('load', function() {
       $("#cover").fadeOut();
     });
-
   </script>
 
   {% if template.directory == 'customers' %}
@@ -65,6 +65,7 @@
 
   <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'theme.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
   <!--[if lt IE 9]><script src="{{ 'theme.js' | asset_url }}"></script><![endif]-->
+
 
   {{ content_for_header }}
 </head>
@@ -80,8 +81,6 @@
   </main>
 
   {% section 'footer' %}
-
-
 
 </body>
 </html>
