--- a/src/sections/product-list.liquid
+++ b/src/sections/product-list.liquid
@@ -137,27 +137,24 @@
             {% comment %} Overwrite image if custom image is set {% endcomment %}
             {% if disturbers.settings.image != blank %}
               {% assign image = disturbers.settings.image %}
+              {% assign image2 = disturbers.settings.image2 %}
+              {% assign image3 = disturbers.settings.image3 %}
             {% endif %}
 
             {% comment %} Overwrite content if custom content is set {% endcomment %}
+            
             {% if disturbers.settings.content != blank %}
               {% assign content = disturbers.settings.content %}
             {% endif %}
-
+            {% if paginate.current_page == 1 %}
             <div class="grid__item small--one-whole small--padding-top-default product-disturber">
-              <a class="product-item-link" href="{{ disturbers.settings.url }}">
-                <div class="product-item-card">
-                  {{ image.src | img_url: '' | img_tag: image.alt }}
-                </div>
-                
-                <div class="product-item-card-hover">
-                  <div class="text-content">
-                    {{ content }}
-                  </div>
-                </div> 
-              </a>
-            </div>
-
+              <div class="siema">
+                {{ image.src | img_url: '' | img_tag: image.alt, 'image-siema' }}
+                {{ image2.src | img_url: '' | img_tag: image.alt, 'image-siema' }}
+                {{ image3.src | img_url: '' | img_tag: image.alt, 'image-siema' }}
+              </div>
+          </div> 
+          {% endif %}
           {% endif %}
         {% endif %}
       {% endfor %}
@@ -182,80 +179,6 @@
   </div>
 {% endpaginate %}
 
-<script>
-function addCss() {
-  var classes = [
-    "one-half",
-    "four-twelfths",
-    "three-twelfths",
-    "four-twelfths",
-    "four-twelfths"
-  ]
-  var offset = [
-    "medium-up--push-none",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-three-twelfths"
-  ]
-  var spacing = [
-    "medium-up--padding-top-none",
-    "medium-up--padding-top-none",
-    "medium-up--padding-top-one",
-    "medium-up--padding-top-two",
-    "medium-up--padding-top-two"
-  ]
-
-  var grid = document.getElementById("collection-grid").children;
-  
-  var i;
-  for (i = 0; i < grid.length; i++) {
-      var remainder = i%5;
-      grid[i].classList.add(classes[remainder], offset[remainder], spacing[remainder]);
-  }
-}
-
-document.addEventListener("DOMContentLoaded", function() {
-  addCss();
-});
-
-var isInViewport = function (elem) {
-  var bounding = elem.getBoundingClientRect();
-    return (
-      bounding.top >= 0 &&
-      bounding.left >= 0 &&
-      bounding.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-      bounding.right <= (window.innerWidth || document.documentElement.clientWidth)
-    );
-};
-
-var ep = document.querySelector('.endless-pagination');
-
-function handleScroll(event) {
- if (isInViewport(ep)) {
-    window.removeEventListener('scroll', handleScroll, false);
-    var nextPageUrl = ep.childNodes[1].getAttribute('href');
-    var req = new XMLHttpRequest();
-    req.onreadystatechange = function success() {
-       if (req.readyState === 4 && req.status === 200) {
-        const newContainer = req.responseXML.querySelector('#collection-grid');
-        const newPagination = req.responseXML.querySelectorAll('.endless-pagination');
-        console.log(newPagination[0]);
-        document.getElementById("collection-grid").insertAdjacentHTML('beforeend', newContainer.innerHTML);
-        ep.innerHTML = newPagination[0].innerHTML;
-        addCss();
-        window.addEventListener('scroll', handleScroll, false);
-       }
-    }
-    req.open('GET', nextPageUrl);
-    req.responseType = 'document';
-    req.send();
-    }
-}
-
-window.addEventListener('scroll', handleScroll, false);
-</script>
-
 
 {% schema %}
   {
@@ -271,6 +194,16 @@ window.addEventListener('scroll', handleScroll, false);
           {
             "type": "image_picker",
             "id": "image",
+            "label": "Content image"
+          },
+          {
+            "type": "image_picker",
+            "id": "image2",
+            "label": "Content image"
+          },
+          {
+            "type": "image_picker",
+            "id": "image3",
             "label": "Content image"
           },
           {
@@ -305,3 +238,5 @@ window.addEventListener('scroll', handleScroll, false);
     ]
   }
 {% endschema %}
+
+
