--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -1,6 +1,8 @@
-
-
 {% include 'geo' %}
+
+<div class="cookie-notification" style="display:none;">
+  By continuing to use this website, you accept cookies that we use to improve your experience on this site and to provide you with services and content tailored to your interests. To learn more please read our <a href="#">Privacy and Cookie Policy</a> <a class="close-link" href="#">OK</a>
+</div>
 
 <div class="navigation-overlay" id="navigation-overlay">
   <div class="navigation-full">
@@ -34,24 +36,11 @@
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}     
         </ul>
-          <div class="grid__item medium-up--one-quarter small--one-whole small--padding-top-default newsletter">
-           <div id="subscribe-box" style="display: flex;">
-            <form action="/search" method="get" role="search" style="width: 100%; display: flex; border-bottom: 1px solid #717171;">
-             <div id="email-input" style="flex-basis: 95%;">
-            <input type="search"
-                  name="q"
-                  id="Search"
-                  value="{{ search.terms | escape }}"
-                  placeholder="Search"
-                  style="width: 100%; border: 0; padding-bottom: 10px;">
-            </div>
-             <div id="submit-button" style="flex-basis: 5%;">    
-            <input type="submit" value="→" style="width: 100%; border: 0; background: transparent; padding-bottom: 10px;">
-            </div>
-            <input type="hidden" name="type" value="product" />
-          </form>
-             </div>
-        </div>
+        {% assign placeholder = "Search" %}
+        {% assign width = "medium-up--one-quarter" %}
+        {% include 'search-form' %}
+   
+
         {% comment %} <div class="grid__item medium-up--one-quarter small--one-whole small--padding-top-default newsletter">
          {% include 'newsletter-header' %}
         </div> {% endcomment %}
@@ -104,7 +93,7 @@
               </div>
             {% else %}
             <div class="logo">
-            <img src="{{ section.settings.logo | img_url: '600x600' }}"
+            <img src="{{'Rudi-logo.svg' | file_url }}"
                  alt="{{ section.settings.logo.alt | default: shop.name }}"
                  itemprop="logo">
             </div>
@@ -119,7 +108,7 @@
       </div>
     {% endif %}
 
-   <div>
+   <div class="cart-button">
       <a class="cart-link" href="/cart">
         {% include 'icon-cart' %}
         {% if cart.item_count != 0 %}<div class="cart-full"></div>{% endif %}
@@ -190,6 +179,23 @@
     e.preventDefault();
     $( ".navigation-overlay" ).slideToggle("slow");
   });
+
+    $('.close-link').click(function(e){
+      localStorage.setItem('accepted',true);
+        $('.cookie-notification').hide();
+    });
+
+    var is_accepted = localStorage.getItem('accepted');
+
+    if(is_accepted){
+      console.log('localStorage')
+      $('.cookie-notification').hide();
+    }
+
+    if(!is_accepted){
+      console.log('no localStorage');
+      $('.cookie-notification').show();
+    }
 </script>  
 
 {% schema %}
