Popups for delivery and size guide

--- a/src/snippets/delivery-info-popup.liquid
+++ b/src/snippets/delivery-info-popup.liquid
@@ -5,7 +5,7 @@
     {% include 'icon-close' %}
     </a>
 </div>
-<div>
+<div style="padding: 0 30px">
 <h1>Delivery information</h1>
 Complimentary Standard shipping for orders over 450 € <br><br>
 
