--- a/src/snippets/size-guide-popup.liquid
+++ b/src/snippets/size-guide-popup.liquid
@@ -7,6 +7,8 @@
 </div>
 <div class="table">
 <h1>Size guide</h1>
+<p style="text-align: center">You can find comprehensive size chart complete with measurements of each garment <a style="text-decoration: underline" href="/pages/comprehensive-size-guide">here</a>.</p>
+<br><br>
 <table class="size-guide-table">
     <tr>
     <td></td>
