--- a/src/sections/related-products.liquid
+++ b/src/sections/related-products.liquid
@@ -1,3 +1,4 @@
+<!-- not currently in use -->
 <div class="grid">
 <div class="grid__item medium-up--padding-top-two small--padding-top-three">
   <header class="section-header">
