--- a/src/snippets/size-guide-popup.liquid
+++ b/src/snippets/size-guide-popup.liquid
@@ -1,58 +1,59 @@
 <div class="toggle-content toggle-content-size">
-<div class="size-chart-full">
-<div style="position: fixed; top: 60px; right: 60px;">
-    <a class="toggle-size">
-    {% include 'icon-close' %}
-    </a>
-</div>
-<div class="table">
-<h1>Size guide</h1>
-<p style="text-align: center">You can find comprehensive size chart complete with measurements of each garment <a style="text-decoration: underline" href="/pages/comprehensive-size-guide">here</a>.</p>
-<br><br>
-<table class="size-guide-table">
-    <tr>
-    <td></td>
-    <td>FR</td>
-    <td>UK</td>
-    <td>US</td>
-    <td>IT</td>
-    </tr>
-    <tr>
-    <td>XS</td>
-    <td>32</td>
-    <td>4</td>
-    <td>0</td>
-    <td>36</td>
-    </tr>
-    <tr>
-    <td>S</td>
-    <td>34</td>
-    <td>6</td>
-    <td>2</td>
-    <td>38</td>
-    </tr>
-    <tr>
-    <td>M</td>
-    <td>36</td>
-    <td>8</td>
-    <td>4</td>
-    <td>40</td>
-    </tr>
-    <tr>
-    <td>L</td>
-    <td>38</td>
-    <td>10</td>
-    <td>6</td>
-    <td>42</td>
-    </tr>
-    <tr>
-    <td>XL</td>
-    <td>40</td>
-    <td>12</td>
-    <td>8</td>
-    <td>44</td>
-    </tr>
-</table>
-</div>
-</div>
+    <div class="size-chart-full">
+        <div class="close-button">
+            <a class="toggle-size">
+            {% include 'icon-close' %}
+            </a>
+        </div>
+
+    <div class="table">
+        <h1>Size guide</h1>
+        <p style="text-align: center">You can find comprehensive size chart complete with measurements of each garment <a style="text-decoration: underline" href="/pages/comprehensive-size-guide">here</a>.</p>
+        <br><br>
+            <table class="size-guide-table">
+                <tr>
+                <td></td>
+                <td>FR</td>
+                <td>UK</td>
+                <td>US</td>
+                <td>IT</td>
+                </tr>
+                <tr>
+                <td>XS</td>
+                <td>32</td>
+                <td>4</td>
+                <td>0</td>
+                <td>36</td>
+                </tr>
+                <tr>
+                <td>S</td>
+                <td>34</td>
+                <td>6</td>
+                <td>2</td>
+                <td>38</td>
+                </tr>
+                <tr>
+                <td>M</td>
+                <td>36</td>
+                <td>8</td>
+                <td>4</td>
+                <td>40</td>
+                </tr>
+                <tr>
+                <td>L</td>
+                <td>38</td>
+                <td>10</td>
+                <td>6</td>
+                <td>42</td>
+                </tr>
+                <tr>
+                <td>XL</td>
+                <td>40</td>
+                <td>12</td>
+                <td>8</td>
+                <td>44</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
