--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -151,7 +151,7 @@
        </div>
       </div>
         <div class="information">
-          {% include 'icon-size-guide' %} <a class="toggle-delivery">Delivery info</a><br>
+          &rarr;&nbsp;<a class="toggle-delivery"> Delivery info</a><br>
           {% include 'icon-size-guide' %} <a class="toggle-size">Sizeguide</a>
         </div> 
     </div>
