--- a/src/snippets/delivery-info-popup.liquid
+++ b/src/snippets/delivery-info-popup.liquid
@@ -1,6 +1,6 @@
 <div class="toggle-content toggle-content-delivery">
     <div class="size-chart-full">
-        <div style="close-button">
+        <div class="close-button">
             <a class="toggle-delivery">
                 {% include 'icon-close' %}
             </a>
