--- a/src/snippets/product-slider.liquid
+++ b/src/snippets/product-slider.liquid
@@ -121,10 +121,10 @@ document.addEventListener('click', (e) => {
     }
     if (dir == "fwd") {
       mySiemaWithDots.next();
-      siema.style.cursor = "e-resize";
+      siema.style.cursor = "pointer";
     } else {
       mySiemaWithDots.prev();
-      siema.style.cursor = "w-resize";
+      siema.style.cursor = "pointer";
     }
   }
 });
