--- a/src/sections/blurb.liquid
+++ b/src/sections/blurb.liquid
@@ -1,13 +1,11 @@
 {% if section.settings.collection == collection.handle %}
-    <div class=""  style="margin: 60px 0 90px 0; padding: 0 30px">
-    <p class="">
-        {{ section.settings.blurb-text }}
-    </p>
-    <hr>
+    <div class="blurb">
+      <p>
+          {{ section.settings.blurb-text }}
+      </p>
+      <hr>
     </div>
 {% endif %}
-
-
 
 {% schema %}
   {
